@@ -984,6 +984,7 @@ $Id$
       "650" SP "STREAM" SP StreamID SP StreamStatus SP CircID SP Target
           [SP "REASON=" Reason [ SP "REMOTE_REASON=" Reason ]]
           [SP "SOURCE=" Source] [ SP "SOURCE_ADDR=" Address ":" Port ]
+          [SP "PURPOSE=" Purpose]
           CRLF
 
       StreamStatus =
@@ -1032,6 +1033,13 @@ $Id$
    extended events are enabled.  It indicates the address and port
    that requested the connection, and can be (e.g.) used to look up the
    requesting program.
+
+      Purpose = "DIR_FETCH" / "UPLOAD_DESC" / "DNS_REQUEST" /
+                 "USER" /  "DIRPORT_TEST"
+
+   The "PURPOSE" field is provided only for NEW and NEWRESOLVE events, and
+   only if extended events are enabled (see 3.19).  Clients MUST accept
+   purposes not listed above.
 
 4.1.3. OR Connection status changed
 
